fixing company card's visibility (in the footer) on mobile devices

--- a/assets/css/masterskayanit.css
+++ b/assets/css/masterskayanit.css
@@ -71,3 +71,16 @@
         color: #000000 !important;
     }
 }
+
+@media screen and (max-width:960px) {
+    .t554__card-wrapper,
+    .t554__card-wrapper > .t554__card {
+        position: relative !important;
+    }
+
+    .t554__card-wrapper {
+        max-width: 480px;
+        margin: 10px;
+        width: 45%;
+    }
+}
